--- a/MyRESTDemo/views/comments/show.ejs
+++ b/MyRESTDemo/views/comments/show.ejs
@@ -7,8 +7,12 @@
     <title>Show</title>
 </head>
 <body>
-    <h1>Comment id: <%= comment.id %> </h1>
-    <h2><%= comment.comment %> - <%= comment.username %>  </h2>
+    <h1>Comment id: <%=comment.id%> </h1>
+    <h2><%=comment.comment%> - <%= comment.username %>  </h2>
     <a href="/comments">Go back</a>
+    <a href="/comments/<%= comment.id %>/edit">Go to edit the user's comment</a>
+    <form method="POST" action="/comments/<%=comment.id %>?_method=DELETE">
+        <button>Delete</button>
+    </form>
 </body>
 </html>
